--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 packages = [{include = "page_analyzer"}]
 
 [tool.poetry.dependencies]
-python = "^3.10.12"
+python = ">=3.10"
 flask = "^2.3.2"
 gunicorn = "^21.2.0"
 validators = "^0.20.0"
