--- a/.github/workflows/tarakanov-check.yml
+++ b/.github/workflows/tarakanov-check.yml
@@ -22,14 +22,14 @@ jobs:
         run: |
           pip install poetry
           make install
-#      - name: Run linter and pytest
-#        run: |
-#          make lint
-#          make test
-#      - name: Test & publish code coverage
-#        uses: paambaati/codeclimate-action@v3.2.0
-#        env:
-#          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-#        with:
-#          coverageCommand: make test-coverage
-#          debug: true
+      - name: Run linter and pytest
+        run: |
+          make lint
+          make test
+      - name: Test & publish code coverage
+        uses: paambaati/codeclimate-action@v3.2.0
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make test-coverage
+          debug: true
